--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,67 @@
+server.port=8081
+spring.application.name=bohan
 
+# 配置数据库
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/company_frame?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.username=root
+spring.datasource.druid.password=root
+
+
+
+# 连接池配置 一些通用配置 不必研究
+spring.datasource.druid.initial-size=5
+spring.datasource.druid.max-active=20
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
+spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
+spring.datasource.druid.validation-query-timeout=30000
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.filters=stat,wall
+
+
+#logging 配置
+logging.file=${logging.path}/${spring.application.name}.log
+logging.path=logs
+logging.level.com.yingxue.lesson=debug
+
+# mybatis 对于mapper的位置 classpath就是 resources
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+# swagger 开关
+swagger2.enable=true
+
+# Redis 基本都是固定的 没必要研究
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=bohan
+spring.redis.lettuce.pool.max-active=100
+spring.redis.lettuce.pool.max-wait=PT10S
+spring.redis.lettuce.pool.max-idle=30
+spring.redis.lettuce.pool.min-idle=1
+spring.redis.timeout=PT10S
+
+# 处理热部署有的时候swagger找不到404 牺牲一下加载时间
+spring.devtools.restart.poll-interval=3000ms
+spring.devtools.restart.quiet-period=2999ms
+
+
+# 设置Jwt参数
+# jwt.secretKey=78944878877848fg)
+jwt.secretKey=140628630654331fg)
+jwt.accessTokenExpireTime=PT2H
+jwt.refreshTokenExpireTime=PT8H
+jwt.refreshTokenExpireAppTime=P30D
+jwt.issuer=bohan.com
+
+
+# 配置分页
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
