--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=bohan
 # 配置数据库
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/company_frame?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/megrez-academy?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
 
